introducing breakout css class to keep mat's fix for breakout pages but keep old alignment for boxed text on archive home pages

--- a/public/stylesheets/structure.css
+++ b/public/stylesheets/structure.css
@@ -261,11 +261,10 @@ footer p {
 	width: 430px;
 	margin-right: 20px;
 }
+
 .datasets {
-	margin-right: 0px;	
-	width: 230px !important;
-	margin-left: 20px !important;	
-	float: right !important;	
+	width: 230px!important;
+	margin-right: 0px;
 }
 
 .datasets h3 {
@@ -273,6 +272,14 @@ footer p {
 	padding-bottom: 10px;
 	color: #000;
 }
+
+.breakout {
+	margin-right: 0px;	
+	width: 230px !important;
+	margin-left: 20px !important;	
+	float: right !important;	
+}
+
 #historical .content article aside {
 	float: left;
 	margin-left: 0px;
